--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <input type="email" id="username" class:="input:focus" required>
 
                     <label for="password">Password:</label>
-                    <input type="password" id="password" class:="input:focus" required> <br /> <br />
+                    <input type="text" id="password" class:="input:focus" required> <br /> <br />
 
                     <input type="checkbox" id="checkbox">
                     <label for="checkbox">Remember Login?</label>
