--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Milestone</title>
 </head>
 <body>
+<nav>
+    <p>Cleverse Academy</p>
+    <button class = "btn1">Login</button>
+</nav>
+<div>
     <h1>Hello World</h1>
     <h2>Welcome</h2>
     <p>How r u today?</p>
     </hr>
-
+    <div class="milestone-container" >
         <!-- * Frontend Milestone -->
         <div class="milestone-card">
             <h2 class="">Frontend Milestones!</h2>
@@ -41,6 +46,8 @@
             </ol>
             <a href="https://academy.cleverse.com/detail">View course detail</a>
         </div>
+    </div>
+
     <center>
         <div>
             <p>Form</p>
