update clear input text to do list in hands-on-5

--- a/hands-on-5/index.html
+++ b/hands-on-5/index.html
@@ -14,7 +14,7 @@
         <form>
           <label for="task"></label>
           <input type="text" id="task" placeholder="To do list...." />
-          <button id="add-task">Add</button>
+          <button type="submit" id="add-task">Add</button>
         </form>
       </header>
 
